--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,6 +41,10 @@
       "files": ["*.component.html"],
       "extends": ["plugin:@angular-eslint/template/recommended", "plugin:prettier/recommended"],
       "rules": {}
+    },
+    {
+      "files": ["*.ts"],
+      "extends": ["plugin:ngrx/recommended"]
     }
   ]
 }
