feat: add modules (core, shared, auth, board, material)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,9 @@
     "module": "es2020",
     "lib": ["es2020", "dom"],
     "paths": {
-      "@store/*": ["src/app/store/*"]
+      "@store/*": ["src/app/store/*"],
+      "@core/*": ["src/app/core/*"],
+      "@shared/*": ["src/app/shared/*"]
     }
   },
   "angularCompilerOptions": {
