--- a/angular.json
+++ b/angular.json
@@ -111,6 +111,7 @@
   },
   "defaultProject": "project-management-app",
   "cli": {
+    "analytics": false,
     "defaultCollection": "@angular-eslint/schematics"
   }
 }
