fix: update api url

--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,4 +1,4 @@
 {
-  "apiUrl": "https://secure-journey-55564.herokuapp.com",
+  "apiUrl": "https://safe-brook-87543.herokuapp.com",
   "localStorageUserKey": "__pma__user__"
 }
