--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,7 +44,10 @@
     },
     {
       "files": ["*.ts"],
-      "extends": ["plugin:ngrx/recommended"]
+      "extends": ["plugin:ngrx/recommended"],
+      "rules": {
+        "ngrx/no-store-subscription": "off"
+      }
     }
   ]
 }
